--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-montserrat), sans-serif;
+}
+
+code {
+  font-family: var(--font-lora), serif;
+}
+html,
+body {
+  overflow-x: hidden;
+}
+h1,
+h2,
+h3 {
+  font-family: var(--font-montserrat), sans-serif;
+}
+
+p {
+  font-family: var(--font-montserrat), serif;
+}
+
+.scrolled .logo {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.nav {
+  position: fixed; /* or absolute */
+
+  z-index: 50; /* Higher than DecayCard */
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
